<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Πληροφορίες"
                android:textColor="#fff"
                android:gravity="center" />
            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#b2ffffff"/>
            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:textSize="16sp"
                    android:textColor="#fff"
                    android:text="@string/hintGreen"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/lighgreencircle"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="left"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:textSize="16sp"
                    android:textColor="#fff"
                    android:text="@string/hintLightGreen"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/redcircle"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="left"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:textSize="16sp"
                    android:textColor="#fff"

                    android:text="@string/hintRed"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@drawable/lightcircle"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:gravity="left"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:textSize="16sp"
                    android:textColor="#fff"

                    android:text="@string/hintInvisible"/>
            </LinearLayout>
            <Button
                android:id="@+id/okButton"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:text="OK"
                android:textColor="#2e1f54"
                android:textSize="18sp"
                android:clickable="true"
                android:background="@drawable/buttonrect"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>