<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="22sp"
                android:text="Βοήθεια"
                android:gravity="center"/>
            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#b2ffffff"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bullet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/firstBullet"
                    android:textAlignment="gravity"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bullet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/secondBullet"
                    android:textAlignment="gravity"

                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bullet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/thirdBullet"
                    android:textAlignment="gravity"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/okActButton"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:text="OK"
                android:textColor="#2e1f54"
                android:textSize="18sp"
                android:clickable="true"
                android:background="@drawable/buttonrect"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>